# husky-demo

husky_description/urdf/: husky.urdf.xacro
husky_gazebo/launch/: husky_playpen.launch.py
husky_gazebo/worlds/: 1_obstacle.sdf  2_obstacle.sdf  3_obstacle.sdf  4_obstacle.sdf  7_obstacle.sdf  9_obstacle.sdf  barrel_testing.sdf
husky_mpc/: package.xml  setup.cfg  setup.py
husky_mpc/husky_mpc/: map.py  mpc_node.py  nmpc.py  node_template.py  robot.py  util.py
husky_mpc_cpp/: CMakeLists.txt  package.xml
husky_mpc_cpp/include/husky_mpc_cpp/: Map.hpp  Nmpc.hpp  Robot.hpp  map.hpp  mpc_util.hpp  nmpc.hpp  robot.hpp  smpc.hpp
husky_mpc_cpp/src/: Map.cpp  Nmpc.cpp  Robot.cpp  map.cpp  mpc_node.cpp  mpc_util.cpp  nmpc.cpp  nmpc_node.cpp  robot.cpp  smpc.cpp  smpc_node.cpp
